--- a/partials/start.html
+++ b/partials/start.html
@@ -1,9 +1,9 @@
 <section class="container_1080">
 	<div class="clear_50"></div>
 	<a href="#cipher">
-		<img id="dan_large" class="center" src="img/daniel.png">
+		<img id="dan_large" class="center animated bounceInDown" src="img/daniel.png">
 		<span class="mont thick huge center">Hi, there!</span>
 		<div class="clear_25"></div>
-		<span class="mont thin large center">My name is Daniel. I'm here to help you solve some puzzles!  Unfortunately, there are blocks in my programming that stop me from just giving you the answers, but if we're clever, I'm sure we can work around them.</span>
+		<span id="dan_intro" class="mont thin large center animated fadeIn">My name is Daniel. I'm here to help you solve some puzzles!  Unfortunately, there are blocks in my programming that stop me from just giving you the answers, but if we're clever, I'm sure we can work around them.</span>
 	</a>
 </section>
