--- a/css/layout.css
+++ b/css/layout.css
@@ -11,7 +11,7 @@
 	text-align: center;
 }
 #dan_large {
-	width: 300px;
+	height: 393px;
 	padding-left: 20px;
 }
 #dan_small {
@@ -213,6 +213,13 @@
 	background-color: rgba(0, 0, 0, 0.4);
 	margin-right: 10px;
 }
+.antlike_input {
+	font-family: 'montserrat'; sans-serif;
+	font-size: 9pt;
+	color: white;
+	background-color: rgba(0, 0, 0, 0.4);
+	margin-right: 10px;
+}
 .by_five_input {
 	font-family: 'montserrat'; sans-serif;
 	font-size: 24pt;
@@ -246,6 +253,11 @@
 }
 .simon_submit {
 	margin-top: 10px;
+}
+.clear_5 {
+	display: block;
+	width: 100%;
+	height: 5px;
 }
 .clear_10 {
 	display: block;
@@ -444,3 +456,259 @@
 	background-image: url(../img/blue4.png);
 	background-size: 48px 60px;
 }
+.delayed_15 {
+	-webkit-animation-duration: .5s;
+	-webkit-animation-delay: 14s;
+}
+.delayed_2 {
+	-webkit-animation-duration: 2s;
+	-webkit-animation-delay: 2s;
+}
+#status_bar {
+	height: 15px;
+	width: 1080px;
+	background-color: black;
+	margin-top: 3px;
+	border: 2px solid white;
+
+}
+#status {
+	height: 15px;
+	background-color: #CC0000;
+	-webkit-animation-name: stretch;
+	-webkit-animation-duration: 360s;
+	animation-name: stretch;
+	animation-duration:360s;
+}
+@-webkit-keyframes stretch {
+	0% {width: 20px;}
+	100% {width: 1080px;}
+}
+#unlocked_dan_words_holder {
+	height: 160px;
+}
+.invisible {
+	opacity: 0;
+}
+#wrong_command {
+	margin-left: 5px;
+	-webkit-animation-delay: 4s;
+}
+#spaceteam {
+	width: 5px;
+	height: 5px;
+	opacity: 0;
+	background-color: white;
+	float: top;
+}
+.hold_dying_dan {
+}
+#dying_dan {
+	height: 300px;
+}
+#dead_dan {
+	height: 300px;
+}
+#guardian_box {
+	width: 700px;
+	height: 150px;
+	margin: 50px auto 0px auto;
+	border: 6px groove white;
+	background-image: url(../img/guardian.png);
+	background-size: 700px 150px;
+}
+#guardian_background {
+	background-color: black;
+	position: relative;
+	top: -30px;
+	padding: 20px;
+	height: 810px;
+}
+.decrypt {
+	width: 320px;
+	height: 95px;
+	opacity: 0;
+	position: absolute;
+	background-color: black;
+}
+.mid {
+	left: 390px;
+}
+.right {
+	left: 760px;
+}
+#q01 {
+	z-index: 49;
+	-webkit-animation-delay: 10s;
+}
+#q02 {
+	z-index: 48;
+	-webkit-animation-delay: 21s;
+}
+#q03 {
+	z-index: 47;
+	-webkit-animation-delay: 30s;
+}
+#q04 {
+	z-index: 46;
+	-webkit-animation-delay: 38s;
+}
+#q05 {
+	z-index: 45;
+	-webkit-animation-delay: 45s;
+}
+#q06 {
+	z-index: 44;
+	-webkit-animation-delay: 52s;
+}
+#q07 {
+	z-index: 43;
+	-webkit-animation-delay: 58s;
+}
+#q08 {
+	z-index: 42;
+	-webkit-animation-delay: 64s;
+}
+#q09 {
+	z-index: 41;
+	-webkit-animation-delay: 70s;
+}
+#q10 {
+	z-index: 40;
+	-webkit-animation-delay: 75s;
+}
+#q11 {
+	z-index: 39;
+	-webkit-animation-delay: 80s;
+}
+#q12 {
+	z-index: 38;
+	-webkit-animation-delay: 85s;
+}
+#q13 {
+	z-index: 37;
+	-webkit-animation-delay: 90s;
+}
+#q14 {
+	z-index: 36;
+	-webkit-animation-delay: 95s;
+}
+#q15 {
+	z-index: 35;
+	-webkit-animation-delay: 100s;
+}
+#q16 {
+	z-index: 34;
+	-webkit-animation-delay: 104s;
+}
+#q17 {
+	z-index: 33;
+	-webkit-animation-delay: 108s;
+}
+#q18 {
+	z-index: 32;
+	-webkit-animation-delay: 112s;
+}
+#q19 {
+	z-index: 31;
+	-webkit-animation-delay: 116s;
+}
+#q20 {
+	z-index: 30;
+	-webkit-animation-delay: 120s;
+}
+#q21 {
+	z-index: 29;
+	-webkit-animation-delay: 124s;
+}
+#q22 {
+	z-index: 28;
+	-webkit-animation-delay: 127s;
+}
+#q23 {
+	z-index: 27;
+	-webkit-animation-delay: 130s;
+}
+#q24 {
+	z-index: 26;
+	-webkit-animation-delay: 133s;
+}
+#q25 {
+	z-index: 25;
+	-webkit-animation-delay: 136s;
+}
+#q26 {
+	z-index: 24;
+	-webkit-animation-delay: 139s;
+}
+#q27 {
+	z-index: 23;
+	-webkit-animation-delay: 142s;
+}
+#q28 {
+	z-index: 22;
+	-webkit-animation-delay: 145s;
+}
+#q29 {
+	z-index: 21;
+	-webkit-animation-delay: 148s;
+}
+#q30 {
+	z-index: 20;
+	-webkit-animation-delay: 152s;
+}
+#q31 {
+	z-index: 19;
+	-webkit-animation-delay: 156s;
+}
+#q32 {
+	z-index: 18;
+	-webkit-animation-delay: 160s;
+}
+#q33 {
+	z-index: 17;
+	-webkit-animation-delay: 164s;
+}
+#q34 {
+	z-index: 16;
+	-webkit-animation-delay: 168s;
+}
+#q35 {
+	z-index: 15;
+	-webkit-animation-delay: 172s;
+}
+#q36 {
+	z-index: 14;
+	-webkit-animation-delay: 176s;
+}
+#q37 {
+	z-index: 13;
+	-webkit-animation-delay: 180s;
+}
+#q38 {
+	z-index: 12;
+	-webkit-animation-delay: 184s;
+}
+#q39 {
+	z-index: 11;
+	-webkit-animation-delay: 188s;
+}
+#q40 {
+	z-index: 10;
+	-webkit-animation-delay: 190s;
+}
+#q41 {
+	z-index: 9;
+	-webkit-animation-delay: 194s;
+}
+#q42 {
+	z-index: 8;
+	-webkit-animation-delay: 204s;
+}
+
+
+
+
+
+
+
